# EquationSolver

./: CMakeLists.txt  README.md  compute.cpp  header.h  main.cpp  split.cpp  testfile.txt
